[gd_scene load_steps=15 format=3 uid="uid://bmd1idc70kmiu"]

[ext_resource type="Script" uid="uid://bmwtnxhcx165w" path="res://scripts/Card.gd" id="1_0x2y3"]
[ext_resource type="Shader" uid="uid://b7c0lxakltxok" path="res://shaders/CardIcon.gdshader" id="2_tgmmg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_shadow"]
bg_color = Color(0, 0, 0, 0.4)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.12, 0.12, 0.22, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_border"]
bg_color = Color(0.35, 0.4, 0.5, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_inner"]
bg_color = Color(0.22, 0.28, 0.38, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cost"]
bg_color = Color(0.15, 0.35, 0.75, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_art"]
bg_color = Color(0.28, 0.32, 0.42, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4dx8l"]
shader = ExtResource("2_tgmmg")
shader_parameter/shine_speed = 1.5
shader_parameter/shine_width = 0.08
shader_parameter/shine_intensity = 0.800000038
shader_parameter/shine_color = Color(1, 1, 1, 0.4)
shader_parameter/shine_angle_rad = 0.785398
shader_parameter/shine_enabled = false
shader_parameter/delay_between_shines = 0.8
shader_parameter/time_offset = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_desc"]
bg_color = Color(0.08, 0.08, 0.13, 0.9)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rarity"]
bg_color = Color(0.35, 0.35, 0.35, 0.7)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Animation" id="Animation_4dx8l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardBackground/CardBorder/CardInner/VBox/ArtContainer/CardIcon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardBackground/CardBorder/CardInner/VBox/ArtContainer/CardIcon:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_tgmmg"]
resource_name = "cardicon_movement"
length = 4.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardBackground/CardBorder/CardInner/VBox/ArtContainer/CardIcon:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(2, 2, 2),
"update": 0,
"values": [-0.01, 0.01, -0.01]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardBackground/CardBorder/CardInner/VBox/ArtContainer/CardIcon:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(2, 2, 2),
"update": 0,
"values": [Vector2(0.98, 0.98), Vector2(1.02, 1.02), Vector2(0.98, 0.98)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4dx8l"]
_data = {
&"RESET": SubResource("Animation_4dx8l"),
&"cardicon_movement": SubResource("Animation_tgmmg")
}

[node name="Card" type="Control"]
custom_minimum_size = Vector2(205, 310)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.5
offset_top = -154.0
offset_right = 102.5
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_0x2y3")

[node name="CardShadow" type="Panel" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = 6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_shadow")

[node name="CardBackground" type="Panel" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="CardBorder" type="Panel" parent="CardBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_border")

[node name="CardInner" type="Panel" parent="CardBackground/CardBorder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_inner")

[node name="VBox" type="VBoxContainer" parent="CardBackground/CardBorder/CardInner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderContainer" type="HBoxContainer" parent="CardBackground/CardBorder/CardInner/VBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="NameLabel" type="Label" parent="CardBackground/CardBorder/CardInner/VBox/HeaderContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.6)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 13
text = "Card"
vertical_alignment = 1
autowrap_mode = 2

[node name="CostContainer" type="Panel" parent="CardBackground/CardBorder/CardInner/VBox/HeaderContainer"]
clip_contents = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_cost")

[node name="CostLabel" type="Label" parent="CardBackground/CardBorder/CardInner/VBox/HeaderContainer/CostContainer"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 18
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CardBackground/CardBorder/CardInner/VBox"]
layout_mode = 2

[node name="ArtContainer" type="Panel" parent="CardBackground/CardBorder/CardInner/VBox"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_art")

[node name="CardIcon" type="TextureRect" parent="CardBackground/CardBorder/CardInner/VBox/ArtContainer"]
material = SubResource("ShaderMaterial_4dx8l")
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(93.5, 93.5)
expand_mode = 5

[node name="HSeparator2" type="HSeparator" parent="CardBackground/CardBorder/CardInner/VBox"]
layout_mode = 2

[node name="StatsContainer" type="HBoxContainer" parent="CardBackground/CardBorder/CardInner/VBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="StatValue" type="Label" parent="CardBackground/CardBorder/CardInner/VBox/StatsContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 18
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="CardBackground/CardBorder/CardInner/VBox"]
layout_mode = 2

[node name="DescriptionContainer" type="Panel" parent="CardBackground/CardBorder/CardInner/VBox"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_desc")

[node name="DescriptionLabel" type="Label" parent="CardBackground/CardBorder/CardInner/VBox/DescriptionContainer"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.92, 0.92, 0.92, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 12
text = "Description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HSeparator4" type="HSeparator" parent="CardBackground/CardBorder/CardInner/VBox"]
layout_mode = 2

[node name="RarityContainer" type="Panel" parent="CardBackground/CardBorder/CardInner/VBox"]
clip_contents = true
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_rarity")

[node name="RarityLabel" type="Label" parent="CardBackground/CardBorder/CardInner/VBox/RarityContainer"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 2.0
offset_right = -4.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.85, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.6)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 12
text = "[Common]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4dx8l")
}
autoplay = "cardicon_movement"
